apps/base/frigate/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frigate
  namespace: frigate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frigate
  template:
    metadata:
      labels:
        app: frigate
    spec:
      nodeSelector:
        node-role.kubernetes.io/control-plane: "true"
      containers:
        - name: frigate
          image: ghcr.io/blakeblackshear/frigate:0.18.0
          securityContext:
            privileged: true
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "3Gi"
              cpu: "2"
          ports:
            - containerPort: 5000
              name: webui
            - containerPort: 8080
              name: web
            - containerPort: 1984
              name: go2rtc
            - containerPort: 8554
              name: rtsp-feeds
            - containerPort: 8555
              name: webrtc-tcp
              protocol: TCP
            - containerPort: 8555
              name: webrtc-udp
              protocol: UDP
          volumeMounts:
            - mountPath: /config
              name: config
              subPath: config
            - mountPath: /media/frigate
              name: media
              subPath: media
            - mountPath: /dev/shm
              name: dshm
            - name: vaapi
              mountPath: /dev/dri
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: frigate-config-pvc
        - name: media
          persistentVolumeClaim:
            claimName: frigate-media-pvc
        - name: vaapi
          hostPath:
            path: /dev/dri
        - name: dshm
          emptyDir:
            medium: Memory
            sizeLimit: 1Gi
