apps/base/frigate/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frigate-svc
  namespace: frigate
spec:
  selector:
    app: frigate
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      name: webui
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: web
    - protocol: TCP
      port: 1984
      targetPort: 1984
      name: go2rtc
    - protocol: TCP
      port: 8554
      targetPort: 8554
      name: rtsp-feeds
    - protocol: UDP
      port: 8555
      targetPort: 8555
      name: webrtc-udp
    - protocol: TCP
      port: 8555
      targetPort: 8555
      name: webrtc-tcp
