apps/base/frigate/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frigate-ingress
  namespace: frigate
spec:
  rules:
    - host: frigate.mkped.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frigate-svc
                port:
                  number: 5000
  tls:
  - secretName: frigate-certificate-secret
